# enact

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: concept.md  multi_agent_architecture.md
docs/examples/: 01_basic_governance.py  02_safety_and_oversight.py  03_agent_integration_mock.py  04_black_box_governance.py  05_multi_agent_registry.py  basic_usage.py  readonly_policy.yaml
docs/guides/: advanced_features.md  audit_logging.md  continuous_evaluation.md  custom_policies.md  human_oversight.md  integration_master_guide.md  intent_validation.md  safety_reliability.md  tool_registry.md
src/enact/: __init__.py  context.py  main.py
src/enact/config/: __init__.py  loader.py
src/enact/core/: audit.py  domain.py  intent.py  interactors.py  policies.py
src/enact/evaluation/: __init__.py  anomaly.py  metrics.py  red_teaming.py
src/enact/integrations/: __init__.py  opa.py
src/enact/lifecycle/: __init__.py  versioning.py
src/enact/oversight/: __init__.py  approval.py  escalation.py  kill_switch.py
src/enact/policies/: __init__.py  temporal.py
src/enact/registry/: __init__.py  tool_registry.py
src/enact/reliability/: __init__.py  circuit_breaker.py  resilience.py
tests/: test_advanced_features.py  test_audit.py  test_evaluation.py  test_governance.py  test_http_auditor.py  test_improved_api.py  test_mcp_governance.py  test_opa.py  test_oversight.py  test_policies.py  test_red_teaming.py  test_safety.py  test_tool_registry.py  test_validation.py  test_versioning.py
(+9 files in other folders)
